--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -17,17 +17,7 @@
 		<url-pattern>*.jsp</url-pattern>
 		<url-pattern>*.jspx</url-pattern>
 	</servlet-mapping> 
- <servlet>
-    <description></description>
-    <display-name>ex00CreateServlet</display-name>
-    <servlet-name>ex00CreateServlet</servlet-name>
-    <servlet-class>ex0803.ex00CreateServlet</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>ex00CreateServlet</servlet-name>
-    <url-pattern>/ex00CreateServlet</url-pattern>
-  </servlet-mapping>
-  <display-name>Servlet01</display-name>
+  <display-name>Servlet_01</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
@@ -36,44 +26,4 @@
     <welcome-file>default.htm</welcome-file>
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
-  <servlet>
-    <description></description>
-    <display-name>ex01Print</display-name>
-    <servlet-name>ex01Print</servlet-name>
-    <servlet-class>ex0803.ex01Print</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>ex01Print</servlet-name>
-    <url-pattern>/ex01Print</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>ex03Table</display-name>
-    <servlet-name>ex03Table</servlet-name>
-    <servlet-class>ex0803.ex03Table</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>ex03Table</servlet-name>
-    <url-pattern>/ex03Table</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>ex03</display-name>
-    <servlet-name>ex03</servlet-name>
-    <servlet-class>ex0803.ex03</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>ex03</servlet-name>
-    <url-pattern>/ex03</url-pattern>
-  </servlet-mapping>
-  <servlet>
-    <description></description>
-    <display-name>ex02Table</display-name>
-    <servlet-name>ex02Table</servlet-name>
-    <servlet-class>ex0803.ex02Table</servlet-class>
-  </servlet>
-  <servlet-mapping>
-    <servlet-name>ex02Table</servlet-name>
-    <url-pattern>/ex02Table</url-pattern>
-  </servlet-mapping>
 </web-app>
